<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF03DAC5"
    tools:context=".history">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historical"
        android:textSize="30sp"
        android:textStyle="italic"
        android:paddingLeft="20dp"
        android:id="@+id/t1"
        android:textColor="@color/black"
        android:layout_margin="50dp"

        />


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/s1"
        android:layout_below="@+id/t1"
        android:text="@string/history"
        android:textSize="30dp"
        android:textStyle="italic"
        android:paddingLeft="20dp"
        android:switchPadding="20dp"
        android:textOn="ON"
        android:textOff="Off"
        android:showText="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/d1"
        android:layout_marginLeft="50dp"
        android:layout_alignTop="@+id/s1"
        android:layout_toRightOf="@+id/s1"
        android:textAllCaps="false"
        android:text="@string/dowenloud"
        android:textSize="15dp"
        android:textStyle="italic"
        android:textColor="@color/black"
        />

    <Switch
        android:id="@+id/s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s1"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:text="@string/geography"
        android:textSize="20dp"
        android:textStyle="italic"
        android:switchPadding="20dp"
        android:textOn="ON"
        android:textOff="Off"
        android:showText="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/d2"
        android:layout_marginLeft="50dp"
        android:layout_alignTop="@+id/s2"
        android:layout_toRightOf="@+id/s2"
        android:textAllCaps="false"
        android:text="@string/dowenloud"
        android:textSize="15dp"
        android:textStyle="italic"
        android:textColor="@color/black"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/s2"
        android:id="@+id/t3"
        android:layout_marginLeft="150dp"
        android:textAllCaps="false"
        android:text="@string/feedback"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:paddingLeft="20dp"
        android:layout_marginTop="250dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/t3"
        android:textAllCaps="false"
        android:text="@string/contact_us"
        android:layout_marginLeft="150dp"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:paddingLeft="20dp"
        />
</RelativeLayout>