<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buttons"
    android:background="#FF03DAC5"
    android:orientation="horizontal">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t1"
        android:text="Literary"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:paddingLeft="50dp"
        android:textColor="@color/black"
        android:textSize="20sp"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="45dp"
        android:id="@+id/b1"
         android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="40dp"
        android:id="@+id/b2"
        android:layout_marginLeft="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t2"
        android:text="@string/historical"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:paddingLeft="50dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t3"
            android:text="@string/religious"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="50dp"/>

        <Button
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:onClick="Religious"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:layout_toRightOf="@+id/b1"
            android:padding="45dp" />


        <Button
            android:id="@+id/b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sci2"
            android:layout_below="@+id/b3"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="0dp"
            android:layout_toRightOf="@+id/b2"
            android:padding="40dp"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t4"
            android:text="@string/scientific"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:paddingLeft="50dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            />


    </LinearLayout>


</LinearLayout>